Added comments to understand code better, added data attributes to provide with product types and providers from the db in next commit.

--- a/public/index.html
+++ b/public/index.html
@@ -155,8 +155,9 @@
     </footer>
 
     <!-- Templates -->
+    <!-- deal block -->
     <script id="template-deal" type="text/template">
-      <article class="deal shadow">
+      <article class="deal shadow" data-provider="{{ providers }}" data-productType="{{ productTypes }}">
           <header class="deal__header">
             <h3 class="deal__title">{{ title }}</h3>
           </header>
