Decided to stick with Ids as it's already done in the checkbox values. Reason: Provider name may change but in a db , the id is usually unique and unchanged.

--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
     <!-- Templates -->
     <!-- deal block -->
     <script id="template-deal" type="text/template">
-      <article class="deal shadow" data-provider="{{ providerName }}" data-productType="{{ productTypes }}">
+      <article class="deal shadow" data-provider="{{ providerId }}" data-productType="{{ productTypes }}">
           <header class="deal__header">
             <h3 class="deal__title">{{ title }}</h3>
           </header>
